--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "jest": "^27.5.1",
-    "playwright": "^1.48.2",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-json-editor-ajrm": "^2.5.14",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.14.5",
     "tailwindcss": "^3.4.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -26,8 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "playwright test"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.49.0",
+    "jest": "^29.7.0",
+    "jest-playwright-preset": "^4.0.0",
+    "playwright": "^1.49.0"
   }
 }
